--- a/public/style.css
+++ b/public/style.css
@@ -354,13 +354,18 @@ animations
 
 /* footer */
 
-footer {
-  background-color: #000;
-  color: #9d9d9d;
-  cursor: pointer;
-  padding: 2rem;
-  display: flex;
-  justify-content: center;
+footer{
+    background: #111;
+    padding: 15px 23px;
+    color: #fff;
+    text-align: center;
+}
+footer span a{
+    color: crimson;
+    text-decoration: none;
+}
+footer span a:hover{
+    text-decoration: underline;
 }
 span {
   color: #fff;
